<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="account_type">com.tuggygs.bringsfdata.login</string>
	<string name="app_name"><b>BringSFdata</b></string>
	<string name="app_package">com.tuggygs.bringsfdata</string>
    <string name="welcome">Welcome %s</string>
	<string name="logout_button">Logout</string>
	<string name="fetch_contacts_button">Fetch Contacts</string>
	<string name="fetch_accounts_button">Fetch Accounts</string>
	<string name="clear_button">Clear</string>
	<string name="button_send">rest</string>

	<string name="oAuthUrl">https://login.salesforce.com</string>
	<string name="consumerKey">3MVG98_Psg5cppybVUCS.qT8KNnGnLSmRvgSMNtQhToYLT8l1VexH0xADvguT9rvk_aAbd783J8Ki2arndWi9</string>
	<string name="callbackUrl">sfdcsample:success</string>
	<string name="add_contact">Add</string>
	<string name="name_label">Name</string>
	<string name="email_label">Email</string>
	<string name="phone_label">Phone</string>
	<string name="save_contact">Save</string>
	<string name="fname_label">First Name</string>
	<string name="lname_label">Last Name</string>
	<string name="get_place">Places</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="deleteContact">Delete Contact</string>
	<string name="edit">Edit Score</string>
	<string name="delete">Delete</string>
	<string name="Add_New_Contact">Add Conatct</string>
	<string name="Set_Alarm_Time">Set Alarm</string>
	<string name="save">Delete</string>
	<string name="match_prediction">Match Predictions</string>
	<string name="start_prediction">Play</string>
	<string name="Home">Home</string>
	<string name="Away">Away</string>
	<string name="save_prediction">Save Predictions</string>



	<string name="hello_world">Hello world!</string>
	<string name="action_settings">Settings</string>
	<string name="showBirthdays">List Your Contacts</string>
	<string name="birthsLabel">Closest Birthdays</string>
	<string name="title_activity_display_contact">DisplayContact</string>
	<string name="name">Name*</string>
	<string name="phone">Phone</string>
	<string name="email">Email</string>
	<string name="street">Street</string>
	<string name="country">City/State/Zip</string>
	<string name="pick_date">Pick Date</string>
	<string name="bdate">Birth Date*</string>
	<string name="saveCredentials">Login</string>
	<string name="Username">Username:</string>
	<string name="Password">Password:</string>
	<string name="password_hint">Password</string>
	<string name="gmHeader">Login to Predictor</string>

	<string name="cur_date">Current Date (M-D-YYYY): </string>
	<string name="ch_label">Change Date</string>
	<string name="selectdate">Select Date</string>
	<string name="dateImg">Set</string>
	<string name="Minutes">Min</string>
	<string name="Hours">HH</string>
	<string name="pick_time">Pick Time</string>
	<string name="time_save">Save Time</string>
	<string name="alarmTimeLabel">Alarm set to:</string>
	<string name="loginPredictor">Login</string>
	<string name="register">Register if you are not a predictor</string>
	<string name="savePredictor">Save</string>
	<string name="regHeader">Fill your credentials</string>
	<string name="prName">Name</string>
	<string name="tempButton">List Current Matches</string>
	<string name="save_scores">Save Scores</string>


</resources>
