<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".PredictorLogin"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_weight="2.81">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gmHeader"
            android:textStyle="bold"
            android:textSize="@dimen/header_size"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Username"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginBottom="46dp"
            android:layout_above="@+id/tvPassword"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_alignBottom="@+id/tvUsername"
            android:layout_toRightOf="@+id/tvUsername"
            android:layout_toEndOf="@+id/tvUsername">
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_above="@+id/loginCredentials"
            android:layout_toLeftOf="@+id/etUsername"
            android:layout_toStartOf="@+id/etUsername" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_alignBottom="@+id/tvPassword"
            android:layout_alignLeft="@+id/etUsername"
            android:layout_alignStart="@+id/etUsername">
        </EditText>

        <!-- android:hint="@string/password_hint" -->
        <Button
            android:id="@+id/loginCredentials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="22dp"
            android:text="@string/loginPredictor" />
        <!-- android:onClick="saveCredentials" -->
    </RelativeLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/registerLink"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/register"
            android:linksClickable="true"/>

    </LinearLayout>

</LinearLayout>
